--- a/config_sample.env
+++ b/config_sample.env
@@ -2,13 +2,13 @@
 _____REMOVE_THIS_LINE_____=True
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "5845010640:AAFhOqdUOqzJreUydDIj6s-SQm2KI-B1lfw"
+OWNER_ID = "1347968999"
+TELEGRAM_API = "27653707"
+TELEGRAM_HASH = "a0a34f929896e75f87f652e7cb878203"
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
+GDRIVE_ID = "0ABbKjOT8UWSqUk9PVA"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"
 AUTO_DELETE_MESSAGE_DURATION = "60"       
@@ -159,7 +159,7 @@ IMDB_TEMPLATE = "<b>Title: </b> {title} [{year}]\n<b>Also Known As:</b> {aka}\n<
 
 #DIFFERENT BOT BUTTONS 
 DISABLE_DRIVE_LINK = "" 
-VIEW_LINK = ""
+VIEW_LINK = "True"
 SOURCE_LINK = ""
 START_BTN1_NAME = ""
 START_BTN1_URL = ""
